Fixed text alignment of title in 'Material Oficial'

--- a/src/components/Analisis2/ContentEntry/ContentEntry.css
+++ b/src/components/Analisis2/ContentEntry/ContentEntry.css
@@ -7,6 +7,7 @@
 }
 
 .title--content-entry-am2 {
+  text-align: start !important;
   margin-top: 10px;
   margin-bottom: 30px;
   line-height: 32px;
